# circuitforge-core

./: .cliff.toml  .gitignore  CHANGELOG.md  Dockerfile.orch  LICENSE  README.md  mkdocs.yml  pyproject.toml
.forgejo/workflows/: ci.yml  docker.yml  mirror.yml  release-pypi.yml
circuitforge_core/: __init__.py
circuitforge_core/activitypub/: __init__.py  actor.py  delivery.py  inbox.py  lemmy.py  objects.py  signing.py
circuitforge_core/affiliates/: __init__.py  disclosure.py  programs.py  router.py
circuitforge_core/api/: __init__.py  corrections.py  feedback.py
circuitforge_core/audio/: __init__.py  buffer.py  convert.py  gate.py  resample.py
circuitforge_core/cloud_session/: __init__.py
circuitforge_core/community/: __init__.py  db.py  models.py  snipe_store.py  store.py
circuitforge_core/community/migrations/: __init__.py  (+6 more)
circuitforge_core/config/: __init__.py  license.py  settings.py
circuitforge_core/db/: __init__.py  base.py  migrations.py
circuitforge_core/documents/: __init__.py  client.py  ingest.py  models.py  pdf.py
circuitforge_core/hardware/: __init__.py  detect.py  generator.py  models.py  tiers.py
circuitforge_core/job_quality/: __init__.py  models.py  scorer.py  signals.py
circuitforge_core/llm/: router.py
circuitforge_core/manage/: __init__.py  __main__.py  cli.py  config.py  docker_mode.py  native_mode.py
circuitforge_core/musicgen/: __init__.py  app.py
circuitforge_core/pipeline/: __init__.py  crystallizer.py  executor.py  models.py  multimodal.py  recorder.py  registry.py  staging.py
circuitforge_core/preferences/: __init__.py  accessibility.py  currency.py  paths.py  store.py
circuitforge_core/reranker/: __init__.py  app.py  base.py
circuitforge_core/resources/: __init__.py  cli.py  client.py  compose.yml  models.py
circuitforge_core/stt/: __init__.py  app.py
circuitforge_core/tasks/: __init__.py  scheduler.py
circuitforge_core/text/: __init__.py  app.py
circuitforge_core/tiers/: __init__.py  tiers.py
circuitforge_core/tts/: __init__.py  app.py
circuitforge_core/vector/: __init__.py  base.py  sqlite_vec.py
circuitforge_core/vision/: __init__.py  app.py  router.py
circuitforge_core/wizard/: __init__.py  base.py
docker/: orch-entrypoint.sh
docs/: index.md  plausible.js
docs/developer/: adding-module.md  editable-install.md  licensing.md
docs/getting-started/: installation.md  using-in-product.md
docs/modules/: affiliates.md  config.md  db.md  documents.md  hardware.md  index.md  llm.md  manage.md  pipeline.md  preferences.md  resources.md  stt.md  tasks.md  text.md  tiers.md  tts.md  vision.md  wizard.md
scripts/: test_musicgen.py
tests/: test_config.py  test_db.py  test_llm_router.py  test_preferences.py  test_stubs.py  test_tiers.py
tests/community/: test_db.py  test_models.py  test_store.py
tests/test_activitypub/: test_actor.py  test_delivery.py  test_inbox.py  test_lemmy.py  test_objects.py  test_signing.py
tests/test_affiliates/: test_disclosure.py  test_integration.py  test_programs.py  test_router.py
tests/test_api/: test_feedback.py
tests/test_audio/: test_buffer.py  test_convert.py  test_gate.py  test_resample.py
tests/test_config/: test_license.py
tests/test_documents/: test_client.py  test_ingest.py  test_models.py  test_pdf.py
tests/test_hardware/: test_detect.py  test_generator.py  test_tiers.py
tests/test_job_quality/: test_models.py  test_scorer.py  test_signals.py
tests/test_manage/: test_config.py  test_docker_mode.py  test_native_mode.py
tests/test_musicgen/: test_app.py  test_mock_backend.py
tests/test_pipeline/: test_crystallizer.py  test_executor.py  test_models.py  test_multimodal.py  test_recorder.py  test_registry.py
tests/test_reranker/: test_base.py  test_bge.py  test_cohere.py  test_cross_encoder.py  test_qwen3.py  test_remote.py
tests/test_resources/: test_agent_app.py  test_agent_supervisor.py  test_agent_watchdog.py  test_cli.py  test_client.py  test_coordinator_allocate.py  test_coordinator_app.py  test_coordinator_auth.py  test_coordinator_probe.py  test_docuvision.py  test_eviction_engine.py  test_eviction_executor.py  test_gpu_monitor.py  test_integration.py  test_lease_manager.py  test_models.py  test_node_selector.py  test_node_store.py  test_ollama_adopt.py  test_profile_registry.py  test_service_manager.py  test_service_registry.py
tests/test_tasks/: test_scheduler.py
tests/test_text/: test_backend.py  test_oai_compat.py
tests/test_vector/: test_base.py  test_sqlite_vec.py
tests/test_vision/: test_app.py  test_backend.py
(+66 files in other folders)
