[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "circuitforge-core"
version = "0.14.0"
description = "Shared scaffold for CircuitForge products (MIT)"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "openai>=1.0",
]

[project.optional-dependencies]
community = [
    "psycopg2>=2.9",
]
manage = [
    "platformdirs>=4.0",
    "typer[all]>=0.12",
]
text-llamacpp = [
    "llama-cpp-python>=0.2.0",
]
text-transformers = [
    "torch>=2.0",
    "transformers>=4.40",
    "accelerate>=0.27",
]
text-transformers-4bit = [
    "circuitforge-core[text-transformers]",
    "bitsandbytes>=0.43",
]
stt-faster-whisper = [
    "faster-whisper>=1.0",
]
stt-service = [
    "circuitforge-core[stt-faster-whisper]",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]
tts-chatterbox = [
    "chatterbox-tts>=0.1",
    "torchaudio>=2.0",
]
tts-service = [
    "circuitforge-core[tts-chatterbox]",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]
musicgen-audiocraft = [
    "audiocraft>=1.3.0",
    "torch>=2.0",
    "torchaudio>=2.0",
    "einops>=0.7",
    "flashy>=0.0.1",
    "num2words>=0.5",
]
musicgen-service = [
    "circuitforge-core[musicgen-audiocraft]",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]
vision-siglip = [
    "torch>=2.0",
    "transformers>=4.40",
    "Pillow>=10.0",
]
vision-vlm = [
    "torch>=2.0",
    "transformers>=4.40",
    "Pillow>=10.0",
    "accelerate>=0.27",
]
vision-service = [
    "circuitforge-core[vision-siglip]",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]
dev = [
    "circuitforge-core[manage]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "fastapi>=0.110",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
cf-manage = "circuitforge_core.manage.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["circuitforge_core*"]

[tool.setuptools.package-data]
"circuitforge_core.community.migrations" = ["*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
